--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -2,30 +2,61 @@
 # Define command-line arguments
 from snakemake.io import expand
 
+
 configfile: "config/config.yaml"
 
-# Rule 1: Obtain eqtl weights from bim file
-rule obtain_eqtl_weights:
-    input:
-        bim=config["genotype_prefix"] + ".bim",
-        weights_source=config["weights_type"],
-        weights=config["weights_file"] + ".csv"
-    output:
-        weights_file=expand("output_weights/weight_file{chromosome}.csv", chromosome=range(1, 23))
-    shell:
-        "python stability_of_kernel_based_methods/obtain_weights_from_bim.py {input.bim} {wildcards.chromosome} {output.weights_file} {input.weights}"
 
-# Rule 2: Merge weight files into one
+# workdir: config["working_dir"]
+
+
+
+# Set working directory
+
+# workdir: config["working_dir"]
+
+
+# rule all:
+# Rule 1: Obtain eqtl weights from bim file
+
+# Rule: Obtain eqtl weights from bim file
+# rule obtain_eqtl_weights:
+#     input:
+#         bim = expand("{genotype_file_path}{genotype_prefix}.bim",genotype_file_path=config["genotype_file_path"],
+#             genotype_prefix=config["genotype_prefix"]),
+#         # bim = config["genotype_file_path"] + config["genotype_prefix"] + ".bim",
+#         weights = config["weights_file"]
+#     params:
+#         weights_source = config["weights_type"]
+#     shell:
+#         """
+#         mkdir -p output_weights
+#         bim="{input.bim}"
+#         weights="{input.weights}"
+#         weights_source={params.weights_source}
+#         for chr in {{1..22}}; do
+#             echo "Processing chromosome $chr"
+#             weights_file="output_weights/{params.weights_source}_weight_file_$chr.csv"
+#             python scripts/obtain_weights_from_bim.py $bim $chr $weights_file $weights
+#         done
+#         """
+# #Rule 2: Merge weight files into one
+
+
 rule merge_eqtl_weights:
     input:
-        eqtl_weights=expand("output_weights/weight_file{chromosome}.csv", chromosome=range(1, 23))
-    output:
-        merged_eqtl_weights=config["genotype_file_path"] + "_merged_weights.csv"
+        eqtl_weights=expand("output_weights/{weight_source}_weight_file_{i}.csv",i=range(1,23),weight_source=config["weights_type"]),
+        # merged_eqtl_weights=expand("{file_path}{weight_source}_merged_weights.csv",file_path=config["genotype_file_path"],weight_source=config["weights_type"])
+    params:
+        merged_eqtl_weights = expand("{file_path}{weight_source}_merged_weights.csv",file_path=config["genotype_file_path"],weight_source=config["weights_type"])
+
     shell:
-        "echo 'SNP_ID,Chromosome,Position,Score' > {output.merged_eqtl_weights} && cat {input} >> {output.merged_eqtl_weights}"
+        """
+        echo 'SNP_ID,Chromosome,Position,Score' > {params.merged_eqtl_weights}
+        cat {input.eqtl_weights} >> {params.merged_eqtl_weights}   
+        """
 
 
-# Rule 3: Perform SKAT test on the genotype
+# Rule 3: Perform SKAT test on the genotypeD
 # rule skat_test:
 #     input:
 #         bfile="merged_Ilmn_ASD",
@@ -35,8 +66,24 @@ rule merge_eqtl_weights:
 #         skat_result="skat_{chromosome}.prefix"
 #     shell:
 #         "Rscript stability_of_kernel_based_methods/skat.R {input.bfile} {input.gene_regions} {input.weights} ./ EQTL {wildcards.chromosome}"
-#
-# # Rule 4: Merge SKAT Chromosome Results into one
+
+rule skat_test:
+    input:
+        genotype = config["genotype_prefix"],
+        merged_eqtl_weights= expand("{file_path}{weight_source}_merged_weights.csv",file_path=config["genotype_file_path"],weight_source=config["weights_type"]),
+        gene_regions = "helper/gene_regions.csv"
+    params:
+        weights_source = config["weights_type"],
+        merged_eqtl_weights= expand("{file_path}{weight_source}_merged_weights.csv",file_path=config[
+        "genotype_file_path"],weight_source=config["weights_type"])
+    shell:
+        """
+        for chr in {{1..22}}; do
+        Rscript scripts/skat.R {input.genotype} {input.gene_regions} {params.weights_source} {input.weights} ./ EQTL $chr
+        done
+        """
+
+# # Rule 4: Merge SKAT Chromosome Results into zone
 # rule merge_skat_results:
 #     input:
 #         skat_prefix=skat_prefix_files
