--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,12 @@
 
 genotype_prefix: "geno_EUR_SCZ"
 weights_type: "EQTL"
-genotype_file_path: "/Users/davidenoma/Desktop/PhD._BMB/LONG_LAB/Projects/Stability of kernel based methods/"
-weights_file: "/Users/davidenoma/Desktop/PhD._BMB/LONG_LAB/Projects/Stability of kernel based methods/eqtl_weights.csv"
+#working_dir: "/Users/davidenoma/Desktop/PhD._BMB/LONG_LAB/Projects/Stability_of_kernel_based_methods/"
+genotype_file_path: "genotype_data/"
+weights_file: "weights/eqtl_weights.csv"
 gene_regions_file: /path/to/gene_regions_file
 disgenet_reference_file: /path/to/ref_file
+chromosome: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
+
+
+# Define chromosome in the configuration file
