--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,12 +2,8 @@
 
 genotype_prefix: "geno_EUR_SCZ"
 weights_type: "EQTL"
-#working_dir: "/Users/davidenoma/Desktop/PhD._BMB/LONG_LAB/Projects/Stability_of_kernel_based_methods/"
 genotype_file_path: "genotype_data/"
 weights_file: "weights/eqtl_weights.csv"
-gene_regions_file: /path/to/gene_regions_file
-disgenet_reference_file: /path/to/ref_file
-chromosome: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
+gene_regions_file: "helper/gene_regions.csv"
+disgenet_reference_file: "helper/C0036341_disease_gda_summary.tsv"
 plink_path: "/Users/davidenoma/Documents"
-
-# Define chromosome in the configuration file
