--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ resources/**
 logs/**
 .snakemake
 .snakemake/**
-result_folder/**
-output_weights/**
-genotype_data/**
-weights/**
-disease_database/**
+result_folder/
+output_weights/
+genotype_data/
+weights/
+disease_database/
