--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -17,6 +17,8 @@ rule skat_test:
         weights_source = config["weights_type"],
         genotype_path=config["genotype_file_path"],
         plink_path=config["plink_path"]
+    conda:
+        "envs/skat.yaml"
     shell:
         """
         export PATH=$PATH:{params.plink_path}
@@ -60,6 +62,8 @@ rule manhattan_plots:
     "genotype_prefix"],weight_source=config["weights_type"]),
     params:
         pval_thresh = 0.05/int(config["sample_size"])
+    conda:
+        "envs/manhattan.yaml"
     shell:
         """
         Rscript scripts/manhattan_plots.R {input.merged_skat_results} {params.pval_thresh}
