--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -24,8 +24,9 @@ rule skat_test:
         "envs/skat.yaml"
     shell:
         """
+        num_cores=$(nproc)
         export PATH=$PATH:{params.plink_path}
-        seq 1 22 | parallel -j $(nproc) --verbose Rscript scripts/skat.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source} {}
+        seq 1 22 | parallel -j $num_cores --verbose Rscript scripts/skat.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source} {}
         """
 # # Rule 4: Merge SKAT Chromosome Results into zone
 rule merge_skat_results:
