--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -17,6 +17,7 @@ rule skat_test:
         weights_source = config["weights_type"],
         genotype_path=config["genotype_file_path"],
         plink_path=config["plink_path"]
+    threads: 22
     log:
         stdout="logs/wkas.stdout",
         stderr="logs/wkas.stderr"
@@ -26,7 +27,7 @@ rule skat_test:
         """
         num_cores=$(nproc)
         export PATH=$PATH:{params.plink_path}
-        seq 1 22 | parallel -j $num_cores --verbose Rscript scripts/skat.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source} {}
+        seq 1 22 | parallel -j ${snakemake[threads]} --verbose Rscript scripts/skat.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source} {}
         """
 # # Rule 4: Merge SKAT Chromosome Results into zone
 rule merge_skat_results:
