--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -16,8 +16,8 @@ rule skat_test:
         genotype = config["genotype_prefix"],
         weights_source = config["weights_type"],
         genotype_path=config["genotype_file_path"],
-        plink_path=config["plink_path"]
-    threads: 22
+        plink_path=config["plink_path"],
+        threads=22
     log:
         stdout="logs/wkas.stdout",
         stderr="logs/wkas.stderr"
@@ -26,7 +26,7 @@ rule skat_test:
     shell:
         """
         export PATH=$PATH:{params.plink_path}
-        seq 1 22 | parallel -j {threads} --verbose Rscript scripts/skat.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source} {}
+        seq 1 22 | parallel -j {params.threads} --verbose Rscript scripts/skat.R {params.genotype} {input.gene_regions} {input.merged_weights} {params.genotype_path} {params.weights_source} {}
         """
 # # Rule 4: Merge SKAT Chromosome Results into zone
 rule merge_skat_results:
