--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -84,15 +84,13 @@ rule manhattan_plots:
     input:
         merged_skat_results = expand("result_folder/merged_{prefix}_{weight_source}_SKAT.txt",prefix=config[
     "genotype_prefix"],weight_source=config["weights_type"]),
-    params:
-        pval_thresh = 0.05/int(config["sample_size"])
     log:
         stdout="logs/wkas.stdout",stderr="logs/wkas.stderr"
     conda:
         "envs/manhattan.yaml"
     shell:
         """
-        Rscript scripts/manhattan_plots.R {input.merged_skat_results} {params.pval_thresh}
+        Rscript scripts/manhattan_plots.R {input.merged_skat_results} 
         """
 rule kegg_pathway_analysis:
     input:
