--- a/config/config-tmpl.yaml
+++ b/config/config-tmpl.yaml
@@ -2,10 +2,10 @@
 #Replace with your configuration
 genotype_prefix: ""
 weights_type: ""
+##Short identifier for your bridge weights
 genotype_file_path: "genotype_data/"
 #Your weights file must follow the format of the sample
 weights_file: "weights/weights.csv"
 gene_regions_file: "helper/gene_regions.csv"
 disgenet_reference_file: "disease_database/{}.tsv"
 plink_path: ""
-sample_size: 100
