--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -140,7 +140,7 @@ rule unweighted_skat:
         """
         export PATH=$PATH:{params.plink_path}
         mkdir -p {params.output_dir}
-        seq 1 22 | parallel -j {threads} --verbose Rscript scripts/skat_unweighted.R {params.genotype_prefix} {input.gene_regions} {params.genotype_path} {params.output_dir} {{}}
+        seq 1 22 | parallel -j {threads} --verbose Rscript scripts/skat_unweighted.R {params.genotype_prefix} {input.gene_regions} {params.genotype_path} {{}} {params.output_dir} 
         """
 
 # Rule: merge_unweighted_results
