skat_test for binary and continuous outcomees.

--- a/config/config-tmpl.yaml
+++ b/config/config-tmpl.yaml
@@ -9,3 +9,4 @@ weights_file: "weights/weights.csv"
 gene_regions_file: "helper/gene_regions.csv"
 disgenet_reference_file: "disease_database/{}.tsv"
 plink_path: ""
+is_binary: "FALSE"
